[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 76.0, 137.0, 288.0 ],
"_edit_vertical_guides_": [ 271.0, 548.0, 760.0 ]
}

[node name="Input1" type="LineEdit" parent="."]
margin_left = 365.213
margin_top = 105.671
margin_right = 435.213
margin_bottom = 130.671

[node name="Input2" type="LineEdit" parent="."]
margin_left = 856.0
margin_top = 103.0
margin_right = 927.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="."]
margin_left = 344.0
margin_top = 15.0
margin_right = 664.0
margin_bottom = 29.0
rect_scale = Vector2( 1.14738, 1.72277 )
text = "Clique no botão para executar cada funcionalidade"

[node name="Label2" type="Label" parent="."]
margin_left = 41.0
margin_top = 77.0
margin_right = 206.0
margin_bottom = 94.0
rect_rotation = 0.534871
rect_scale = Vector2( 1.10873, 1.34498 )
text = "Cria uma lista preenchida"

[node name="Label3" type="Label" parent="."]
margin_left = 306.0
margin_top = 77.0
margin_right = 510.0
margin_bottom = 97.0
rect_scale = Vector2( 1.08411, 1.13333 )
text = "Adicione valores a uma lista"

[node name="Label4" type="Label" parent="."]
margin_left = 590.0
margin_top = 80.0
margin_right = 717.0
margin_bottom = 111.0
rect_scale = Vector2( 1.19776, 1.32943 )
rect_pivot_offset = Vector2( 50, 8 )
text = "Função que retorna 
um texto tela"
align = 1
valign = 1

[node name="Label5" type="Label" parent="."]
margin_left = 792.0
margin_top = 69.0
margin_right = 979.0
margin_bottom = 100.0
rect_scale = Vector2( 1.17103, 1.33383 )
rect_pivot_offset = Vector2( 50, 8 )
text = "Função que retorna seu input"
align = 1
valign = 1

[node name="Resposta1" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 297.0
margin_right = 231.0
margin_bottom = 372.0

[node name="Resposta2" type="RichTextLabel" parent="."]
margin_left = 324.0
margin_top = 299.0
margin_right = 491.0
margin_bottom = 350.0

[node name="Resposta3" type="RichTextLabel" parent="."]
margin_left = 586.0
margin_top = 297.0
margin_right = 729.0
margin_bottom = 353.0

[node name="Resposta4" type="RichTextLabel" parent="."]
margin_left = 809.0
margin_top = 296.0
margin_right = 974.0
margin_bottom = 355.0

[node name="Botão1" type="Button" parent="."]
margin_left = 60.0
margin_top = 140.0
margin_right = 197.0
margin_bottom = 177.0
text = "Lista preenchida"

[node name="Botão2" type="Button" parent="."]
margin_left = 329.0
margin_top = 140.0
margin_right = 469.0
margin_bottom = 174.0
text = "Input"

[node name="Botão3" type="Button" parent="."]
margin_left = 588.213
margin_top = 137.671
margin_right = 719.213
margin_bottom = 170.671
text = "Enter"

[node name="Botão4" type="Button" parent="."]
margin_left = 824.0
margin_top = 138.0
margin_right = 962.0
margin_bottom = 176.0
text = "Enter"

[connection signal="pressed" from="Botão1" to="." method="_on_Boto1_pressed"]
[connection signal="pressed" from="Botão2" to="." method="_on_Boto2_pressed"]
[connection signal="pressed" from="Botão3" to="." method="_on_Boto3_pressed"]
[connection signal="pressed" from="Botão4" to="." method="_on_Boto4_pressed"]
